5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1812_2579.log
== TEST (2019-06-08 22:52:44) 
-- CODE:
calc = input("digite Calcule: ")
	if(calc == "Calcule"):
		b = 1
		h = 0
		for i in range(50):
			h = h + (i+1)/b
			b = b + 2
print(h)
-- ERROR:
File "XXXX", line 2
    if(calc == "Calcule"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:52:56) 
-- CODE:
calc = input("digite Calcule: ")
	if(calc == "Calcule"):
		b = 1
		h = 0
		for i in range(50):
			h = h + (i+1)/b
			b = b + 2
print(h)
-- ERROR:
File "XXXX", line 2
    if(calc == "Calcule"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:53:06) 
-- CODE:
calc = input("digite Calcule: ")
if(calc == "Calcule"):
	b = 1
	h = 0
	for i in range(50):
		h = h + (i+1)/b
		b = b + 2
print(h)
-- OUTPUT:
26.46888742423745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:53:31) 
-- CODE:
calc = input("digite Calcule: ")
if(calc == "Calcule"):
	b = 1
	h = 0
	for i in range(50):
		h = h + b/(i+1)
		b = b + 2
print(h)
-- OUTPUT:
95.5007946616706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 22:53:50) 
-- CODE:
calc = input("digite Calcule: ")
if(calc == "Calcule"):
	b = 1
	h = 0
	for i in range(50):
		h = h + b/(i+1)
		b = b + 2
print(round(h,2))
-- EXECUTION TIME:
0.659079
-- TEST CASE 1:
---- input:
Calcule
---- correct output:
95.50
---- user output:
95.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
